# vatuta

./: .envrc  .gitignore  .markdownlint.json  .pip-audit-ignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  LICENSE-docs  NOTICE  README.md  THIRD_PARTY.md  env.example  justfile  known_vulns_no_fix.md  pom.xml  pyproject.toml  pyrefly.toml
.github/workflows/: ci.yml  codeql.yml  weekly.yml
config/: vatuta.yaml.example
docs/: entity_manager.md  integrations.md  observability.md  qdrant_setup.md  rag_agent.md  rag_tools.md
docs/sources/: confluence.md  jira.md  slack.md
pocs/: bedrock_poc.py  bedrock_tool.py  calendar_poc.py  demo_jira_import.py  doc_cli.py  gemini_poc.py  gitlab_importer.py  ingest_specific_channel.py  inspect_qdrant_payload.py  jira_importer.py  main.py  rag_poc.py  rag_poc_dspy.py  rag_poc_langgraph_dspy.py  slack_importer.py  tools_example.py  verify_slack_chunks.py
src/: __init__.py
src/client/: __init__.py  client.py
src/entities/: __init__.py  manager.py  models.py
src/main/javascript/: project.js  project.json  vatuta.js
src/main/webapp/: vatuta.html
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py  config.py  documents.py  source_config.py
src/rag/: agent.py  document_manager.py  engine.py  qdrant_manager.py
src/rag/tools/: __init__.py  base.py  date.py  jira.py  source_filter.py  utils.py
src/sources/: checkpoint.py  confluence.py  jira.py  jira_source.py  ratelimiter.py  slack.py  source.py
src/utils/: persistent_cache.py
tests/: conftest.py  test_confluence_source.py  test_jira_source.py
tests/client/: test_client.py
tests/entities/: test_manager.py
tests/metrics/: test_ingestion_metrics.py  test_metrics.py
tests/models/: test_models.py
tests/rag/: test_add_documents.py  test_agent_tools.py  test_document_manager.py  test_max_tokens.py  test_qdrant_manager.py  test_rag.py  test_source_filter.py
tests/source/: slack_checkpoint_tests.py  test_confluence_recursion.py  test_confluence_source.py  test_jira_source.py  test_offline_init.py  test_slack_chunking.py
tests/sources/: test_sources.py
tests/utils/: test_utils.py
